Revision history for Perl extension DBIx::Skinny

0.05
   XXXX-XX-XX
        - FIXED: quote col (thanks noblejasper/fujiwara).
                  (table etc no not yet.)
        - FIXED: fetchrow_hashref('NAME_lc') for Oracle. (thanks Tomoyuki Misonou)
0.04
   2009-10-01
        - FIXED: avoid warning, in case of binds contains undef by Profiler.pm (thanks nekoya)
        - FIXED: pod typo (thanks nekoya/yusukebe/fujiwara)
        - MOD: Hide from pause by sample code.
        - ADD: PostgreSQL support (thanks oinume and fujiwara)

0.03
   2009-08-17
        - FIXED: get delete rows count. (RT#48359)
        - FIXED: pod typo (thanks TBONE)
        - MOD: supported search with order_by as hashref or string (thanks nekoya)
        - MOD: call set when updated row object (thanks nekoya)
        - MOD: add new method and more.
        - ADD: skinny sample code.
        - ADD: Manual document.

0.02
    2009-07-15
        - FIXED: tests.
        - MOD: connection method.

0.01
    2008-11-24
        - original version