@@ -1,6 +1,7 @@
 package DBIx::Skinny::DBD::SQLite;
 use strict;
 use warnings;
+use DBIx::Skinny::SQL;
 
 sub last_insert_id { $_[1]->func('last_insert_rowid') }
 
@@ -22,6 +23,8 @@ sub bulk_insert {
 
     return 1;
 }
+
+sub query_builder_class { 'DBIx::Skinny::SQL' }
 
 1;
 
